--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "url": "https://github.com/WhatAKitty/douban-client.git"
   }, 
   "dependencies": {
-    "request": "^=2.67.0"
+    "request": "^=2.67.0",
+    "underscore": "^=1.8.3"
   }, 
   "devDependencies": {
     "should": "*",
