--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
-{ 
-  "name": "twode", 
-  "version": "0.2",
-  "description": "Douban REST client API for node.js.", 
-  "keywords": ["douban","oauth"], 
-  "homepage": "https://github.com/WhatAKitty/douban-client", 
-  "author": "WhatAKitty", 
-  "licenses": { 
-    "type": "MIT", 
-    "url": "https://github.com/WhatAKitty/douban-client/blob/master/LICENSE"
-  },
-  "repository": { 
-    "type": "git", 
+{
+  "name": "twode",
+  "version": "0.2.0",
+  "description": "Douban REST client API for node.js.",
+  "keywords": ["douban" ,"oauth"],
+  "homepage": "https://github.com/WhatAKitty/douban-client",
+  "author": "WhatAKitty",
+  "repository": {
+    "type": "git",
     "url": "https://github.com/WhatAKitty/douban-client.git"
-  }, 
+  },
+  "bugs": {
+    "url": "https://github.com/WhatAKitty/douban-book-client/issues"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=0.4.0"
+  },
+  "main": "./index.js",
   "dependencies": {
     "request": "^=2.67.0",
     "underscore": "^=1.8.3"
-  }, 
+  },
+  "scripts": {
+    "test": "mocha test/v2_api_test"
+  },
   "devDependencies": {
     "should": "*",
     "mocha": "*"
-  },
-  "engines": {
-	  "node":">=0.4.0"
-  }, 
-  "main": "./lib/douban"
+  }
 }
